gccida/c2/compare_for_stack_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1797:4: error: expected ';' after expression
rtx v10; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1797:5: error: use of undeclared identifier 'v10'
rtx v10; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1803:4: error: expected ';' after expression
rtx v16; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1803:5: error: use of undeclared identifier 'v16'
rtx v16; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1816:4: error: expected ';' after expression
rtx regno_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1816:5: error: use of undeclared identifier 'regno_note'
rtx regno_note; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1818:4: error: expected ';' after expression
rtx v31; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1818:5: error: use of undeclared identifier 'v31'
rtx v31; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1824:6: error: use of undeclared identifier 'v37'
rtx *v37; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1851:4: error: expected ';' after expression
rtx v64; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1851:5: error: use of undeclared identifier 'v64'
rtx v64; // r11 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1893:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *v9), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1893:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *v9), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1895:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v8))] 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1898:1: error: use of undeclared identifier 'v10'
v10 = pat_src + 1; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1899:20: error: use of undeclared identifier 'v10'
for ( i = ( int **)v10; ; i = ( int **)( v12 + 2) ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1915:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *v14), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1915:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *v14), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/reg-stack.c:1917:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v13))] 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_for_stack_reg/src/obj/reg-stack.o] Error 1
